--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "googleapis": "^39.2.0"
   }
 }
